[package]
name = "rulox-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
"futures" = "0.3"
"hyper" = { version = "0.14", features = ["http1", "http2", "client", "server", "runtime", "tcp"] }
"rulox" = { path = "./rulox", features = ["serialise"] }
"serde_json" = "1"
"tera" = "1"
"tokio" = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal", "time"] }

[workspace]
members = ["rulox", "rulox_macro", "rulox_types"]

[workspace.package]
authors = ["Caleb Robson"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Spartan2909/rulox"
