[package]
name = "rulox-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "client", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rulox = { path = "./rulox", features = ["serialise"] }
serde_json = "1"
tera = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal", "time", "net"] }

[workspace]
members = ["rulox", "rulox_macro", "rulox_types"]

[workspace.package]
authors = ["Caleb Robson"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Spartan2909/rulox"
