[package]
name = "rulox-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "client", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rulox = { path = "./rulox", features = ["serialise"] }
serde_json = "1"
tera = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal", "time", "net"] }

[workspace]
members = ["rulox", "rulox_macro", "rulox_types"]

[workspace.package]
authors = ["Caleb Robson"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Spartan2909/rulox"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_sign_loss = "allow"
implicit_hasher = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
todo = "warn"
too_many_lines = "allow"
use_self = "allow"
