[package]
name = "rulox"
version = "0.7.2"
edition = "2021"
description = "A lightweight scripting language embedded in Rust."
documentation = "https://docs.rs/rulox/latest"

keywords = ["lox", "scripting", "parsing"]
categories = ["parser-implementations"]

repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
"rulox_macro" = { path = "../rulox_macro", version = "0.7", optional = true }
"rulox_types" = { path ="../rulox_types", version = "0.4", optional = true }

[features]
default = ["transpiler"]
transpiler = ["dep:rulox_macro", "dep:rulox_types"]
