[package]
name = "rulox"
version = "0.8.1"
edition = "2021"
description = "A lightweight scripting language embedded in Rust."
documentation = "https://docs.rs/rulox/latest"
rust-version = "1.70"

keywords = ["lox", "scripting", "parsing"]
categories = ["parser-implementations"]

repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
"rulox_macro" = { path = "../rulox_macro", version = "0.8" }
"rulox_types" = { path ="../rulox_types", version = "0.5" }

[features]
default = ["sync", "async"]
sync = ["rulox_types/sync"]
async = ["sync", "rulox_types/async"]
serialise = ["rulox_types/serialise"]
