[package]
name = "rulox_macro"
version = "0.9.0"
edition = "2021"
description = "A macro for embedding Lox in Rust."
readme = "README.md"

keywords = ["lox", "scripting", "parsing"]
categories = ["parser-implementations"]

repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
"bytes" = "1"
"rulox_types" = { path = "../rulox_types", version = "0.6" }
"syn" = { version = "2.0", features = ["extra-traits"] }
"quote" = "1.0"
"proc-macro2" = "1.0"

[features]
sync = ["rulox_types/sync"]
async = ["sync", "rulox_types/async"]
serialise = ["rulox_types/serialise"]

[lib]
proc-macro = true

[lints]
workspace = true
