[package]
name = "rulox_macro"
version = "0.9.0"
edition = "2021"
description = "A macro for embedding Lox in Rust."
readme = "README.md"

keywords = ["lox", "scripting", "parsing"]
categories = ["parser-implementations"]

repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
"bytes" = "1"
flexi-parse = { version = "0.10.0", features = ["proc-macro"] }
"rulox_types" = { path = "../rulox_types", version = "0.6" }
"syn" = "2"
"quote" = "1.0"
"proc-macro2" = "1.0"

[features]
sync = ["rulox_types/sync"]
async = ["sync", "rulox_types/async"]
serialise = ["rulox_types/serialise"]

[lib]
proc-macro = true

[lints]
workspace = true
