[package]
name = "rulox_types"
version = "0.4.0"
edition = "2021"
description = "Helper types for the rulox crate."
readme = "README.md"

keywords = ["lox", "scripting", "parsing"]
categories = ["parser-implementations"]

repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
"quote" = "1.0"
"proc-macro2" = "1.0"
