[package]
name = "rulox_types"
version = "0.6.0"
edition = "2021"
description = "Helper types for the rulox crate."
readme = "README.md"
rust-version = "1.70"

keywords = ["lox", "scripting", "parsing"]
categories = ["parser-implementations"]

repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bytes = "1"
"castaway" = "0.2"
"fastrand" = "2"
"proc-macro2" = "1.0"
"quote" = "1.0"
"serde" = { version = "1", features = ["derive", "rc"], optional = true }
"serde_json" = { version = "1", optional = true }

[features]
sync = []
async = ["sync"]
serialise = ["dep:serde", "dep:serde_json", "bytes/serde"]

[lints]
workspace = true
