[package]
name = "rulox_types"
version = "0.6.0"
edition = "2021"
description = "Helper types for the rulox crate."
readme = "README.md"
rust-version.workspace = true

keywords = ["lox", "scripting", "parsing"]
categories = ["parser-implementations"]

repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bytes = "1"
"castaway" = "0.2"
"fastrand" = "2"
pin-project = "1.1.5"
"proc-macro2" = "1.0"
"quote" = "1.0"
"serde" = { version = "1", features = ["derive", "rc"], optional = true }
"serde_json" = { version = "1", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json", "bytes/serde"]

[lints]
workspace = true
